Create basic flexbox layout; header and footer

--- a/index.html
+++ b/index.html
@@ -3,15 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" src="./resources/css/reset.css">
-    <link rel="stylesheet" src="./resources/css/style.css">
+    <link rel="stylesheet" href="./resources/css/reset.css">
+    <link rel="stylesheet" href="./resources/css/style.css">
     <title>C.R. Taylor</title>
 </head>
 <body>
     <header>
-
+        <div class="header-nav">
+            <nav>
+                <a class="nav-link" href="#">gotta</a>
+                <a class="nav-link" href="#">have</a>
+                <a class="nav-link" href="#">some</a>
+                <a class="nav-link" href="#">links</a>
+            </nav>
+        </div>
     </header>
     <main>
+        <section>
+            <div class="card hero-card">
+                <div class="hero-frame hero-text">
+                    <h1>C.R. Taylor</h1>
+                    <h3>"Taylor" (she/her)</h3>
+                    <h2>Front End Development</h2>
+                </div>
+                <div class="hero-frame">
+                    <img class="hero-image" src="./resources/images/hero-img-fa.jpg">
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="card gallery-card">
+                <p class="img-frame">images</p>
+                <p class="img-frame">and</p>
+                <p class="img-frame">links</p>
+                <p class="img-frame">will</p>
+                <p class="img-frame">go</p>
+                <p class="img-frame">here</p>
+            </div>
+        </section>
+        <section>
+            <div class="card details-card">
+                <p class="details-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti laudantium qui quidem accusamus excepturi perferendis mollitia voluptate vitae ratione exercitationem rem molestiae quis, dolores aliquam. Quod neque distinctio rem magni.</p>
+            </div>
+        </section>
 
     </main>
     <footer>
