--- a/index.html
+++ b/index.html
@@ -13,44 +13,51 @@
             <nav>
                 <a class="nav-link" href="#">gotta</a>
                 <a class="nav-link" href="#">have</a>
-                <a class="nav-link" href="#">some</a>
                 <a class="nav-link" href="#">links</a>
             </nav>
         </div>
     </header>
     <main>
         <section>
-            <div class="card hero-card">
-                <div class="hero-frame hero-text">
-                    <h1>C.R. Taylor</h1>
-                    <h3>"Taylor" (she/her)</h3>
-                    <h2>Front End Development</h2>
-                </div>
-                <div class="hero-frame">
-                    <img class="hero-image" src="./resources/images/hero-img-fa.jpg">
+            <div class="section intro-section">
+                <h1>C.R. Taylor</h1>
+                <h2>"Taylor" (she/her)</h2>
+                <h3>Front End Developer</h3>
+                <div class="intro-content">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, similique error. Cum temporibus corporis ipsa accusantium asperiores, veniam quos dolor, harum odio doloremque veritatis! Beatae aperiam ea harum quis explicabo!</p>
                 </div>
             </div>
         </section>
         <section>
-            <div class="card gallery-card">
-                <p class="img-frame">images</p>
-                <p class="img-frame">and</p>
-                <p class="img-frame">links</p>
-                <p class="img-frame">will</p>
-                <p class="img-frame">go</p>
-                <p class="img-frame">here</p>
+            <div class="section featured-projects">
+                <div class="project-frame">
+                    <h4 class="project-name">Project Name</h4>
+                    <p class="project-deets">Brief project description</p>
+                    <img class="project-image" src="#">
+                </div>
+                <div class="project-frame">
+                    <h4 class="project-name">Project Name</h4>
+                    <p class="project-deets">Brief project description</p>
+                    <img class="project-image" src="#">
+                </div>
+                <div class="project-frame">
+                    <h4 class="project-name">Project Name</h4>
+                    <p class="project-deets">Brief project description</p>
+                    <img class="project-image" src="#">
+                </div>
             </div>
         </section>
         <section>
-            <div class="card details-card">
-                <p class="details-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti laudantium qui quidem accusamus excepturi perferendis mollitia voluptate vitae ratione exercitationem rem molestiae quis, dolores aliquam. Quod neque distinctio rem magni.</p>
+            <div class="section contact-details">
+                <a class="contact-link" href="#">crtaylordev@gmail.com</a>
+                <a class="contact-link" href="#">crtaylordev.github.io</a>
+                <p class="contact-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti laudantium qui quidem accusamus excepturi perferendis mollitia voluptate vitae ratione exercitationem rem molestiae quis, dolores aliquam. Quod neque distinctio rem magni.</p>
             </div>
         </section>
 
     </main>
     <footer>
         <p class="footer-cr">© C.R. Taylor, 2024</p>
-        <p class="footer-email">crtaylordev@gmail.com</p>
     </footer>
 </body>
 </html>
