Modify CSS for new minimalist look

--- a/index.html
+++ b/index.html
@@ -8,56 +8,48 @@
     <title>C.R. Taylor</title>
 </head>
 <body>
-    <header>
-        <div class="header-nav">
-            <nav>
-                <a class="nav-link" href="#">gotta</a>
-                <a class="nav-link" href="#">have</a>
-                <a class="nav-link" href="#">links</a>
-            </nav>
-        </div>
-    </header>
-    <main>
-        <section>
-            <div class="section intro-section">
-                <h1>C.R. Taylor</h1>
-                <h2>"Taylor" (she/her)</h2>
-                <h3>Front End Developer</h3>
-                <div class="intro-content">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, similique error. Cum temporibus corporis ipsa accusantium asperiores, veniam quos dolor, harum odio doloremque veritatis! Beatae aperiam ea harum quis explicabo!</p>
-                </div>
+    <div class="content-wrapper">
+        <header class="section intro-section">
+            <h1>C.R. Taylor</h1>
+            <h2>"Taylor" (she/her)</h2>
+            <div class="intro-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, similique error. Cum temporibus corporis ipsa accusantium asperiores, veniam quos dolor, harum odio doloremque veritatis! Beatae aperiam ea harum quis explicabo!</p>
             </div>
-        </section>
-        <section>
-            <div class="section featured-projects">
-                <div class="project-frame">
-                    <h4 class="project-name">Project Name</h4>
-                    <p class="project-deets">Brief project description</p>
-                    <img class="project-image" src="#">
+        </header>
+        <main>
+            <section>
+                <div class="section featured-projects">
+                    <h2 class="project-heading">Featured Projects</h3>
+                    <div class="project-gallery">
+                        <div class="project-frame">
+                            <h4 class="project-name">Project Name</h4>
+                            <p class="project-deets">Brief project description</p>
+                            <img class="project-image" src="resources/images/project-image-placeholder.jpg">
+                        </div>
+                        <div class="project-frame">
+                            <h4 class="project-name">Project Name</h4>
+                            <p class="project-deets">Brief project description</p>
+                            <img class="project-image" src="resources/images/project-image-placeholder.jpg">
+                        </div>
+                        <div class="project-frame">
+                            <h4 class="project-name">Project Name</h4>
+                            <p class="project-deets">Brief project description</p>
+                            <img class="project-image" src="resources/images/project-image-placeholder.jpg">
+                        </div>
+                    </div>
                 </div>
-                <div class="project-frame">
-                    <h4 class="project-name">Project Name</h4>
-                    <p class="project-deets">Brief project description</p>
-                    <img class="project-image" src="#">
+            </section>
+            <section>
+                <div class="section contact-details">
+                    <p><span class="contact-type">Contact / </span><a class="contact-link" href="#">crtaylordev@gmail.com</a></p>
+                    <p><span class="contact-type">GitHub / </span><a class="contact-link" href="#">crtaylordev.github.io</a></p>
                 </div>
-                <div class="project-frame">
-                    <h4 class="project-name">Project Name</h4>
-                    <p class="project-deets">Brief project description</p>
-                    <img class="project-image" src="#">
-                </div>
-            </div>
-        </section>
-        <section>
-            <div class="section contact-details">
-                <a class="contact-link" href="#">crtaylordev@gmail.com</a>
-                <a class="contact-link" href="#">crtaylordev.github.io</a>
-                <p class="contact-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti laudantium qui quidem accusamus excepturi perferendis mollitia voluptate vitae ratione exercitationem rem molestiae quis, dolores aliquam. Quod neque distinctio rem magni.</p>
-            </div>
-        </section>
-
-    </main>
-    <footer>
-        <p class="footer-cr">© C.R. Taylor, 2024</p>
-    </footer>
+            </section>
+    
+        </main>
+        <footer class="section">
+            <p>© C.R. Taylor, 2024</p>
+        </footer>
+    </div>
 </body>
 </html>
