Adjust sizing, padding and margin of elements

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             </section>
             <section>
                 <div class="section contact-details">
-                    <p><span class="contact-type">Contact / </span><a class="contact-link" href="#">crtaylordev@gmail.com</a></p>
                     <p><span class="contact-type">GitHub / </span><a class="contact-link" href="#">crtaylordev.github.io</a></p>
+                    <p><span class="contact-type">Contact / </span><a class="contact-link" href="#">crtaylordev@gmail.com</a></p>
                 </div>
             </section>
     
         </main>
-        <footer class="section">
+        <footer class="section footer-section">
             <p>© C.R. Taylor, 2024</p>
         </footer>
     </div>
