Delete redundant divs for readability

--- a/index.html
+++ b/index.html
@@ -17,37 +17,33 @@
             </div>
         </header>
         <main>
-            <section>
-                <div class="section featured-projects">
-                    <h2 class="project-heading">Featured Projects</h3>
-                    <div class="project-gallery">
-                        <div class="project-frame">
-                            <h4 class="project-name">Project Name</h4>
-                            <p class="project-deets">Brief project description</p>
-                            <img class="project-image" src="resources/images/project-image-placeholder.jpg">
-                        </div>
-                        <div class="project-frame">
-                            <h4 class="project-name">Project Name</h4>
-                            <p class="project-deets">Brief project description</p>
-                            <img class="project-image" src="resources/images/project-image-placeholder.jpg">
-                        </div>
-                        <div class="project-frame">
-                            <h4 class="project-name">Project Name</h4>
-                            <p class="project-deets">Brief project description</p>
-                            <img class="project-image" src="resources/images/project-image-placeholder.jpg">
-                        </div>
+            <section class="section featured-projects">
+                <h2 class="project-heading">Featured Projects</h3>
+                <div class="project-gallery">
+                    <div class="project-frame">
+                        <h4 class="project-name">Project Name</h4>
+                        <p class="project-deets">Brief project description</p>
+                        <img class="project-image" src="resources/images/project-image-placeholder.jpg">
+                    </div>
+                    <div class="project-frame">
+                        <h4 class="project-name">Project Name</h4>
+                        <p class="project-deets">Brief project description</p>
+                        <img class="project-image" src="resources/images/project-image-placeholder.jpg">
+                    </div>
+                    <div class="project-frame">
+                        <h4 class="project-name">Project Name</h4>
+                        <p class="project-deets">Brief project description</p>
+                        <img class="project-image" src="resources/images/project-image-placeholder.jpg">
                     </div>
                 </div>
             </section>
-            <section>
-                <div class="section contact-details">
-                    <p><span class="contact-type">GitHub / </span><a class="contact-link" href="#">crtaylordev.github.io</a></p>
-                    <p><span class="contact-type">Contact / </span><a class="contact-link" href="#">crtaylordev@gmail.com</a></p>
-                </div>
+            <section class="section contact-details">
+                <p><span class="contact-type">GitHub / </span><a class="contact-link" href="#">crtaylordev.github.io</a></p>
+                <p><span class="contact-type">Contact / </span><a class="contact-link" href="#">crtaylordev@gmail.com</a></p>
             </section>
     
         </main>
-        <footer class="section footer-section">
+        <footer class="section footer">
             <p>© C.R. Taylor, 2024</p>
         </footer>
     </div>
