Add landing project; media query for header

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
                 <h2 class="project-heading">Featured Projects</h3>
                 <div class="project-gallery">
                     <div class="project-frame">
-                        <h4 class="project-name">Project Name</h4>
-                        <p class="project-deets">Brief project description</p>
-                        <img class="project-image" src="resources/images/project-image-placeholder.jpg">
+                        <a class="project-name" href="https://crtaylordev.github.io/cafelandingpage/">Responsive Landing Page</a>
+                        <p class="project-deets">HTML / Vanilla CSS</p>
+                        <img class="project-image" src="./resources/images/landingpage.png">
                     </div>
                     <div class="project-frame">
-                        <h4 class="project-name">Project Name</h4>
+                        <a class="project-name" href="#">Project Name</a>
                         <p class="project-deets">Brief project description</p>
-                        <img class="project-image" src="resources/images/project-image-placeholder.jpg">
+                        <img class="project-image" src="./resources/images/project-image-placeholder.jpg">
                     </div>
                     <div class="project-frame">
-                        <h4 class="project-name">Project Name</h4>
+                        <a class="project-name" href="#">Project Name</a>
                         <p class="project-deets">Brief project description</p>
-                        <img class="project-image" src="resources/images/project-image-placeholder.jpg">
+                        <img class="project-image" src="./resources/images/project-image-placeholder.jpg">
                     </div>
                 </div>
             </section>
