--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
                 <div class="project-gallery">
                     <div class="project-frame">
                         <a class="project-name" href="https://crtaylordev.github.io/cafelandingpage/">Responsive Landing Page</a>
-                        <p class="project-deets">HTML / Vanilla CSS</p>
-                        <img class="project-image" src="./resources/images/landingpage.png">
+                        <p class="project-deets">HTML / Vanilla CSS / Basic JS</p>
+                        <a href="https://crtaylordev.github.io/cafelandingpage/"><img class="project-image" src="./resources/images/landingpage.png"></a>
                     </div>
                     <div class="project-frame">
-                        <a class="project-name" href="#">Project Name</a>
-                        <p class="project-deets">Brief project description</p>
-                        <img class="project-image" src="./resources/images/project-image-placeholder.jpg">
+                        <a class="project-name" href="https://crtaylordev.github.io/what-is-time/">Time-to-Song Conversion</a>
+                        <p class="project-deets">HTML / Vanilla CSS / JavaScript<br></p>
+                        <a href="https://crtaylordev.github.io/what-is-time/"><img class="project-image" src="./resources/images/what-is-time-proj.png"></a>
                     </div>
                     <div class="project-frame">
-                        <a class="project-name" href="#">Project Name</a>
-                        <p class="project-deets">Brief project description</p>
-                        <img class="project-image" src="./resources/images/project-image-placeholder.jpg">
+                        <a class="project-name" href="https://crtaylordev.github.io/femproj-stats-component/">Responsive Web Components</a>
+                        <p class="project-deets">Frontend Mentor Challenges</p>
+                        <a href="https://crtaylordev.github.io/femproj-stats-component/"><img class="project-image" src="./resources/images/stats-component-proj.png"></a>
                     </div>
                 </div>
             </section>
