Add bio blurb; update contact links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>C.R. Taylor</h1>
             <h2>"Taylor" (she/her)</h2>
             <div class="intro-content">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima, similique error. Cum temporibus corporis ipsa accusantium asperiores, veniam quos dolor, harum odio doloremque veritatis! Beatae aperiam ea harum quis explicabo!</p>
+                <p>Career-switching front-end developer who loves linguistics and logic. I approach development as "translating" ideas and specs into coding language. This feels like a natural continuation of my journey from living as a second-language-speaker in Taipei to drafting precise chain-of-title descriptions in deeds as a legal assistant - vocabulary, syntax and semantics are my bread and butter.</p>
             </div>
         </header>
         <main>
@@ -21,14 +21,14 @@
                 <h2 class="project-heading">Featured Projects</h3>
                 <div class="project-gallery">
                     <div class="project-frame">
-                        <a class="project-name" href="https://crtaylordev.github.io/cafelandingpage/">Responsive Landing Page</a>
-                        <p class="project-deets">HTML / Vanilla CSS / Basic JS</p>
-                        <a href="https://crtaylordev.github.io/cafelandingpage/"><img class="project-image" src="./resources/images/landingpage.png"></a>
-                    </div>
-                    <div class="project-frame">
                         <a class="project-name" href="https://crtaylordev.github.io/what-is-time/">Time-to-Song Conversion</a>
                         <p class="project-deets">HTML / Vanilla CSS / JavaScript<br></p>
                         <a href="https://crtaylordev.github.io/what-is-time/"><img class="project-image" src="./resources/images/what-is-time-proj.png"></a>
+                    </div>
+                    <div class="project-frame">
+                        <a class="project-name" href="https://crtaylordev.github.io/cafelandingpage/">Responsive Landing Page</a>
+                        <p class="project-deets">HTML / Vanilla CSS / Basic JS</p>
+                        <a href="https://crtaylordev.github.io/cafelandingpage/"><img class="project-image" src="./resources/images/landingpage.png"></a>
                     </div>
                     <div class="project-frame">
                         <a class="project-name" href="https://crtaylordev.github.io/femproj-stats-component/">Responsive Web Components</a>
@@ -38,8 +38,8 @@
                 </div>
             </section>
             <section class="section contact-details">
-                <p><span class="contact-type">GitHub / </span><a class="contact-link" href="#">crtaylordev.github.io</a></p>
-                <p><span class="contact-type">Contact / </span><a class="contact-link" href="#">crtaylordev@gmail.com</a></p>
+                <p><span class="contact-type">GitHub / </span><a class="contact-link" href="https://github.com/crtaylordev">crtaylordev.github.io</a></p>
+                <p><span class="contact-type">Contact / </span><a class="contact-link" href="mailto: crtaylordev@gmail.com">crtaylordev@gmail.com</a></p>
             </section>
     
         </main>
