Color and font changes for readability

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>C.R. Taylor</h1>
             <h2>"Taylor" (she/her)</h2>
             <div class="intro-content">
-                <p>Career-switching front-end developer who loves linguistics and logic. I approach development as "translating" ideas and specs into coding language. This feels like a natural continuation of my journey from living as a second-language-speaker in Taipei to drafting precise chain-of-title descriptions in deeds as a legal assistant - vocabulary, syntax and semantics are my bread and butter.</p>
+                <p><strong>Career-switching front-end developer who loves linguistics and logic.</strong> I approach development as "translating" ideas and specs into coding language. This feels like a natural continuation of my journey from living as a second-language-speaker in Taipei to drafting precise chain-of-title descriptions in deeds as a legal assistant - vocabulary, syntax and semantics are my bread and butter.</p>
             </div>
         </header>
         <main>
