Add project; create CSS color variables

--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
                 <h2 class="project-heading">Featured Projects</h3>
                 <div class="project-gallery">
                     <div class="project-frame">
-                        <a class="project-name" href="https://crtaylordev.github.io/cafelandingpage/">Responsive Landing Page</a>
+                        <a class="project-name" href="https://crtaylordev.github.io/happily-ever-scratcher/">One-Page Landing Page</a>
+                        <p class="project-deets">HTML / Vanilla CSS</p>
+                        <a href="hhttps://crtaylordev.github.io/happily-ever-scratcher/"><img class="project-image" src="./resources/images/single-landing-proj.png"></a>
+                    </div>
+                    <div class="project-frame">
+                        <a class="project-name" href="https://crtaylordev.github.io/cafelandingpage/">Multi-Page Business Site</a>
                         <p class="project-deets">HTML / Vanilla CSS / Basic JS</p>
                         <a href="https://crtaylordev.github.io/cafelandingpage/"><img class="project-image" src="./resources/images/landingpage.png"></a>
                     </div>
