Adjust colors; fix link typo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="project-frame">
                         <a class="project-name" href="https://crtaylordev.github.io/happily-ever-scratcher/">One-Page Landing Page</a>
                         <p class="project-deets">HTML / Vanilla CSS</p>
-                        <a href="hhttps://crtaylordev.github.io/happily-ever-scratcher/"><img class="project-image" src="./resources/images/single-landing-proj.png"></a>
+                        <a href="https://crtaylordev.github.io/happily-ever-scratcher/"><img class="project-image" src="./resources/images/single-landing-proj.png"></a>
                     </div>
                     <div class="project-frame">
                         <a class="project-name" href="https://crtaylordev.github.io/cafelandingpage/">Multi-Page Business Site</a>
